[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/frames/tom/tomidle.png" type="Texture" id=2]
[ext_resource path="res://assets/frames/rip.png" type="Texture" id=3]
[ext_resource path="res://assets/frames/tom/tomwalk.png" type="Texture" id=4]
[ext_resource path="res://assets/frames/tom/tomattack.png" type="Texture" id=5]
[ext_resource path="res://sounds/oof.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

resource_name = "Move"
length = 0.8
loop = true

[sub_resource type="Animation" id=2]

resource_name = "dead"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 85.0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "idle"
length = 0.1

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 32.1427, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 1 )
anims/dead = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="invul_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.73766, -9.39211 )
scale = Vector2( 0.433, 0.433 )
frames = SubResource( 6 )
animation = "idle"

[node name="fire_rate" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="invul_timer" to="." method="_on_invul_timer_timeout"]
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
